--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "websockets-playlist",
+  "name": "todo-list",
   "version": "1.0.0",
-  "description": "A chat app using WebSockets",
+  "description": "to do list web app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ."
   },
-  "repository": {
-  },
-  "author": "The Net Ninja",
+  "author": "meghna",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iamshaunjp/websockets-playlist/issues"
-  },
-  "homepage": "https://github.com/iamshaunjp/websockets-playlist#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "ejs": "^3.1.3",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
